Added Assignment 3 Screen Shots
Added assignment 3 screen shots. also updated the realm file to include
instructions for assignment 3 with db username and password. Cleaned up
query to remove first name and last name column titles and replaced
that with just name.

--- a/game_test/css/index.css
+++ b/game_test/css/index.css
@@ -8,6 +8,14 @@ a {
 	text-decoration: none;
 }
 
+table {
+  margin: auto;
+  margin-top: 10px;
+}
+
+canvas{
+  margin-top: 50px;
+}
 .center {
 	margin: auto;
 	border: 1px solid #000000;
