--- a/game_test/css/index.css
+++ b/game_test/css/index.css
@@ -25,11 +25,6 @@ legend{
   align: top;
 }
 
-#register{
-  margin: auto;
-  text-align: center;
-}
-
 .center {
 	margin: auto;
 	border: 1px solid #000000;
@@ -83,57 +78,6 @@ legend{
   text-decoration: none;
 }
 
-/*.tabs {
-    width:50%;
-    display:inline-block;
+.container{
+  margin: 20px auto;
 }
- 
-    /*----- Tab Links -----*/
-    /* Clearfix */
-    /*.tab-links:after {
-        display:block;
-        clear:both;
-        content:'';
-    }
- 
-    .tab-links li {
-        margin:0px 5px;
-        float:left;
-        list-style:none;
-    }
- 
-        .tab-links a {
-            padding:9px 15px;
-            display:inline-block;
-            border-radius:3px 3px 0px 0px;
-            background:#7FB5DA;
-            font-size:16px;
-            font-weight:600;
-            color:#4c4c4c;
-            transition:all linear 0.15s;
-        }
- 
-        .tab-links a:hover {
-            background:#a7cce5;
-            text-decoration:none;
-        }
- 
-    li.active a, li.active a:hover {
-        background:#fff;
-        color:#4c4c4c;
-    }
- 
-    /*----- Content of Tabs -----*/
-   /* .tab-content {
-        padding:15px;
-        border-radius:3px;
-        box-shadow:-1px 1px 1px rgba(0,0,0,0.15);
-        background:#fff;
-    }
-        .tab {
-            display:none;
-        }
- 
-        .tab.active {
-            display:block;
-        }*/
