--- a/game_test/css/index.css
+++ b/game_test/css/index.css
@@ -25,6 +25,53 @@ legend{
   align: top;
 }
 
+form {
+  position: relative;
+  background: #ffffff;
+  border-radius: 5px;
+  padding: 10px 10px 10px 10px;
+  max-width: 320px;
+  width: 100%;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
+}
+
+input {
+  outline: none;
+  display: block;
+  width: 100%;
+  border: 1px solid #d9d9d9;
+  margin: 0px 0px 20px 0px;
+  padding: 10px 15px;
+  box-sizing: border-box;
+  font-wieght: 400;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+}
+
+input[type=Submit] {
+  background: #33b5e5;
+  width: 100%;
+  border: 0;
+  padding: 10px 15px;
+  margin: 20px 0px 10px 0px;
+  color: #ffffff;
+  border-radius: 5px;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+}
+
+input[type=Submit]:hover {
+  background: #2ea3ce;
+  color: #ffffff;
+}
+
+.box {
+  width: 300px;
+  height: auto;
+  margin: auto;
+}
+
 .center {
 	margin: auto;
 	border: 1px solid #000000;
@@ -33,7 +80,7 @@ legend{
 }
 
 .header {
-  height: 300px;
+  height: 200px;
   display: block;
   margin: 10px;
   border: 1px solid #BBB;
@@ -42,38 +89,6 @@ legend{
   font-size: large; 
 }
 
-.btn {
-  background: #3498db;
-  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
-  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
-  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
-  background-image: -o-linear-gradient(top, #3498db, #2980b9);
-  background-image: linear-gradient(to bottom, #3498db, #2980b9);
-  -webkit-border-radius: 10;
-  -moz-border-radius: 10;
-  border-radius: 10px;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 15px;
-  padding: 10px 20px 10px 20px;
-  margin: 25px auto;
-  border: solid #1f628d 2px;
-  width: 100px;
-  height: 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline;
-}
-
-.btn:hover {
-  background: #3cb0fd;
-  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-  text-decoration: none;
-}
 
 .container{
   margin: 20px auto;
