--- a/game_test/css/table.css
+++ b/game_test/css/table.css
@@ -1,5 +1,5 @@
 body {
-    background: #fafafa url(http://jackrugile.com/images/misc/noise-diagonal.png);
+    background: url(http://jackrugile.com/images/misc/noise-diagonal.png);
     color: #444;
     text-shadow: 0 1px 0 #fff;
 }
