--- a/game_test/css/index.css
+++ b/game_test/css/index.css
@@ -76,10 +76,8 @@ input[type=Submit]:hover {
 }
 
 #footer {
-    position: fixed;
-    right: 0;
+    margin-top: 10%;
     bottom: 0;
-    left: 0;
     padding: 8px;
     background-color: #efefef;
     border-top: 1px solid #ff4524; 
